@@ -2,6 +2,8 @@ CHANGES IN FLTK 1.1.7
 
 	- Documentation fixes (STR #648, STR #692, STR #730, STR
 	  #744, STR #745, STR #942, STR #931)
+	- Fl_GIF_Image did not handle images with an incorrect
+	  number of data bits (STR #914)
 	- Fixed some plastic drawing artifacts (STR #906)
 	- Fl_Help_View now draws the box outside the scrollbars,
 	  like the other scrollable widgets (STR #871)
